--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>hello</h1>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis accusantium ad, dolorum iste hic odio repudiandae ab nobis eos nemo, similique reiciendis, libero accusamus. Voluptates libero et sequi odit iusto.</h2>
 </body>
 </html>
